// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidenav demo renders appearance demo correctly 1`] = `
<div>
  <div style="width: 250px; display: inline-block; margin: 0px 10px 50px 0px;">
    <div role="navigation" class="vs-sidenav vs-sidenav-default" appear="true">
      <div class="vs-sidenav-body">
        <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
          <ul>
            <li role="presentation" class="vs-nav-item vs-nav-item-active"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
                <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                  <div tabindex="-1" class="vs-dropdown-item-content">
                    <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                    <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                          Action Params
                        </a></li>
                    </ul>
                  </div>
                </li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div style="width: 250px; display: inline-block; margin: 0px 10px 50px 0px;">
    <div role="navigation" class="vs-sidenav vs-sidenav-inverse" appear="true">
      <div class="vs-sidenav-body">
        <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
          <ul>
            <li role="presentation" class="vs-nav-item vs-nav-item-active"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
                <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                  <div tabindex="-1" class="vs-dropdown-item-content">
                    <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                    <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                          Action Params
                        </a></li>
                    </ul>
                  </div>
                </li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div style="width: 250px; display: inline-block; margin: 0px 10px 50px 0px;">
    <div role="navigation" class="vs-sidenav vs-sidenav-subtle" appear="true">
      <div class="vs-sidenav-body">
        <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
          <ul>
            <li role="presentation" class="vs-nav-item vs-nav-item-active"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
                <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                  <div tabindex="-1" class="vs-dropdown-item-content">
                    <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                    <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                          Action Params
                        </a></li>
                    </ul>
                  </div>
                </li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidenav demo renders basic demo correctly 1`] = `
<div style="width: 250px;">
  <div role="navigation" class="vs-sidenav vs-sidenav-default" appear="true">
    <div class="vs-sidenav-body">
      <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
        <ul>
          <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
          <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
          <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
            <ul role="menu" class="vs-dropdown-menu" appear="true">
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
            </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
          </li>
          <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
            <ul role="menu" class="vs-dropdown-menu" appear="true">
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
              <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                <div tabindex="-1" class="vs-dropdown-item-content">
                  <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                  <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                    <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                    <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                        Action Params
                      </a></li>
                  </ul>
                </div>
              </li>
            </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidenav demo renders divider-panel demo correctly 1`] = `
<div style="width: 250px;">
  <div role="navigation" class="vs-sidenav vs-sidenav-default" appear="true">
    <div class="vs-sidenav-header">
      <div style="padding: 20px; font-size: 16px; background: rgb(52, 195, 255); color: rgb(255, 255, 255);">
        Custom Sidenav
      </div>
    </div>
    <div class="vs-sidenav-body">
      <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
        <ul>
          <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
            <ul role="menu" class="vs-dropdown-menu" appear="true">
              <li role="separator" class="vs-dropdown-item-divider"></li>
              <li class="vs-dropdown-item-panel" style="padding: 15px 20px; color: rgb(170, 170, 170);">
                Reports
              </li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              <li role="separator" class="vs-dropdown-item-divider"></li>
              <li class="vs-dropdown-item-panel" style="padding: 15px 20px; color: rgb(170, 170, 170);">
                Settings
              </li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
              <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
              <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                <div tabindex="-1" class="vs-dropdown-item-content">
                  <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                  <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                    <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                    <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                        Action Params
                      </a></li>
                  </ul>
                </div>
              </li>
            </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidenav demo renders toggle demo correctly 1`] = `
<div>
  <div role="group" class="vs-btn-group"><button type="button" class="vs-btn vs-btn-primary">
      展开
      <span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button> <button type="button" class="vs-btn vs-btn-primary">
      收起
      <span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></button></div>
  <div style="width: 250px; display: inline-block; margin: 0px 10px 50px 0px;">
    <div role="navigation" class="vs-sidenav vs-sidenav-default" appear="true">
      <div class="vs-sidenav-body">
        <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
          <ul>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
                <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                  <div tabindex="-1" class="vs-dropdown-item-content">
                    <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                    <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                          Action Params
                        </a></li>
                    </ul>
                  </div>
                </li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div style="width: 250px; display: inline-block; margin: 0px 10px 50px 0px;">
    <div role="navigation" class="vs-sidenav vs-sidenav-inverse" appear="true">
      <div class="vs-sidenav-body">
        <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
          <ul>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
                <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                  <div tabindex="-1" class="vs-dropdown-item-content">
                    <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                    <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                          Action Params
                        </a></li>
                    </ul>
                  </div>
                </li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <div style="width: 250px; display: inline-block; margin: 0px 10px 50px 0px;">
    <div role="navigation" class="vs-sidenav vs-sidenav-subtle" appear="true">
      <div class="vs-sidenav-body">
        <div class="vs-nav vs-nav-default vs-sidenav-nav vs-nav-vertical">
          <ul>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-dashboard"></i><span class="vs-nav-item-text">Dashboard</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="presentation" class="vs-nav-item"><a role="button" tabindex="0" href="" class="vs-nav-item-content"><i class="vs-icon vs-icon-group"></i><span class="vs-nav-item-text">User Group</span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a></li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Geo</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Devices</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Loyalty</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Visit Depth</a></li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-magic"></i>Advanced<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
            <li role="menu" class="vs-dropdown vs-dropdown-placement-bottom-start vs-dropdown-expand">
              <ul role="menu" class="vs-dropdown-menu" appear="true">
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Applications</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Channels</a></li>
                <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Versions</a></li>
                <li role="presentation" class="vs-dropdown-item vs-dropdown-item-collapse vs-dropdown-item-submenu vs-dropdown-menu-pull-right" eventkey="4-5" componentclass="div" submenu="true">
                  <div tabindex="-1" class="vs-dropdown-item-content">
                    <div role="menu" tabindex="-1" class="vs-dropdown-menu-toggle"><span>Custom Action</span><i class="vs-icon vs-icon-angle-right vs-dropdown-menu-toggle-icon"></i><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></div>
                    <ul class="vs-dropdown-menu" style="display: none;" appear="true">
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">Action Name</a></li>
                      <li role="presentation" class="vs-dropdown-item"><a role="" tabindex="-1" href="" class="vs-dropdown-item-content">
                          Action Params
                        </a></li>
                    </ul>
                  </div>
                </li>
              </ul><a tabindex="0" class="vs-btn vs-btn-subtle vs-dropdown-toggle"><i class="vs-icon vs-icon-gear-circle"></i>Settings<span class="vs-dropdown-toggle-caret"></span><span class="vs-ripple-pond"><span class="vs-ripple" style="display: none;" enteractiveclass="vs-ripple-rippling"></span></span></a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;
